force-app/main/default/objects/Finance_Request_Line_Item__c/Finance_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <description>this is to be affiliated with the &apos;finance request&apos; process</description>
    <label>Finance Request Line Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>FinanceRequestLines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>