force-app/main/default/objects/Finance_Request_Line_Item__c/fields/Credit_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Credit_Allocation__c</fullName>
    <label>Credit Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>