force-app/main/default/objects/Finance_Request_Line_Item__c/fields/Finance_Request__c.field-meta.xml
<CustomField>
    <fullName>Finance_Request__c</fullName>
    <label>Finance Request</label>
    <referenceTo>Finance_Request__c</referenceTo>
    <relationshipLabel>Finance Request Line Items</relationshipLabel>
    <relationshipName>Finance_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>